--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </style>
 </head>
 <body class="manerope-font mx-24">
-  <header class="md:container grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:mx-auto ">
+  <header class="md:container grid-cols-3 lg:grid-cols-3 ">
     <div class="navbar bg-base-100">
       <div class="navbar-start">
         <div class="dropdown">
@@ -52,12 +52,6 @@
         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
           <a href="#slide4" class="btn btn-circle">❮</a> 
           <a href="#slide2" class="btn btn-circle">❯</a>
-          <div class="bg-black text-white rounded-xl -mt-20">
-            <h3 class="p-2">Meet all the heroes from the field</h3>
-            <p class="p-4">Dit amet consectetur. Condimentum dignissim 
-              <br>
-              adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-          </div>
         </div>
       </div> 
       <div id="slide2" class="carousel-item relative w-full">
@@ -71,13 +65,95 @@
   </header>
   <main>
    <section>
-    <div class="">
-      <h2 class="text-4xl font-extrabold text-center">Professional Hockeys Club</h3>
-        <p class="text-center">
-          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. 
+    <div>
+      <h2 class="text-2xl font-extrabold text-center">Professional Hockeys Club</h3>
+        <p class="text-center mt-6">
+          Dit amet consectetur. Condimentum 
+          <br>
+          dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. 
         </p>
     </div>
+    <div class="gap-6 justify-between mt-12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 ">
+    <div class="card w-60">
+      <div>
+    <img class="w-25" src="Images/Group 9.svg" alt="Shoes" />
+      </div>
+      <div class="card-body">
+        <h2 class="card-title">Prayer Facility</h2>
+        <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+      </div>
+    </div>
+      <div class="card w-60">
+        <div>
+    <img class="w-25" src="Images/Group 10.svg" alt="Shoes" />
+      </div>
+      <div class="card-body">
+        <h2 class="card-title">Prayer Facility</h2>
+        <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+      </div>
+    </div>
+    <div class="card w-60">
+      <div>
+    <img class="w-25" src="Images/Group 11.svg" alt="Shoes" />
+      </div>
+      <div class="card-body">
+        <h2 class="card-title">Prayer Facility</h2>
+        <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+      </div>
+    </div>
+    <div class="card w-60">
+      <div>
+    <img class="w-25" src="Images/group 12.svg" alt="Shoes" />
+      </div>
+      <div class="card-body">
+        <h2 class="card-title">Prayer Facility</h2>
+        <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+      </div>
+    </div>
+    </div>
    </section>
+   <!-- card section start -->
+<section>
+  <div class="flex gap-10">
+<!-- card 1 -->
+<div class="hero  h-[338px] w-[573px] bg-cover" style="background-image: url(Images/2.png);">
+  <div class="hero-content flex-col lg:flex-row">
+    <div>
+      <h1 class="text-5xl font-bold text-white">Box Office News!</h1>
+      <p class="py-6 text-white">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+      <button class="btn bg-orange-600 text-white">Get Started</button>
+    </div>
+  </div>
+</div>
+        <!-- card 1 end -->
+
+
+        <!-- card 2 -->
+<div class="hero h-[338px] w-[573px] bg-cover" style="background-image: url(Images/3.png);">
+  <div class="hero-content flex-col lg:flex-row">
+    <div>
+      <h1 class="text-5xl font-bold text-white">Box Office News!</h1>
+      <p class="py-6 text-white">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+      <button class="btn bg-orange-600 text-white">Get Started</button>
+    </div>
+  </div>
+</div>
+        <!-- card 2 end -->
+
+
+<!-- parent div --> </div>
+<div class="my-5">
+  <div class="hero w-[1170px] h-[450px] bg-cover" style="background-image: url(Images/4.png);">
+          <div class="hero-content flex-col lg:flex-row">
+            <div class="">
+              <h1 class="text-5xl font-bold  text-white">Box Office News!</h1>
+              <p class="py-6 text-white">Provident cupiditate voluptatem et <br> Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn bg-orange-600 text-white">Get Started</button>
+            </div>
+          </div>
+        </div>
+</div>
+</section>
   </main>
   <footer>
 
