--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div>
       <h1 class="text-5xl font-bold text-white">Box Office News!</h1>
       <p class="py-6 text-white">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-      <button class="btn bg-orange-600 text-white">Get Started</button>
+      <button class="btn bg-orange-600 border-orange-600 text-white">Get Started</button>
     </div>
   </div>
 </div>
@@ -134,7 +134,7 @@
     <div>
       <h1 class="text-5xl font-bold text-white">Box Office News!</h1>
       <p class="py-6 text-white">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-      <button class="btn bg-orange-600 text-white">Get Started</button>
+      <button class="btn bg-orange-600 border-orange-600 text-white">Get Started</button>
     </div>
   </div>
 </div>
@@ -148,12 +148,79 @@
             <div class="">
               <h1 class="text-5xl font-bold  text-white">Box Office News!</h1>
               <p class="py-6 text-white">Provident cupiditate voluptatem et <br> Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-              <button class="btn bg-orange-600 text-white">Get Started</button>
+              <button class="btn bg-orange-600 border-orange-600 text-white">Get Started</button>
             </div>
           </div>
         </div>
 </div>
 </section>
+<section>
+  <h3 class="text-3xl font-extrabold text-center mt-12">Our new Product</h3>
+  <p>Dit amet consectetur. Condimentum dignissim
+    <br>
+     adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+</section>
+<section class="mx-2 lg:mx-24 mt-5">
+  <div class="text-center">
+    <h2 class=" text-4xl font-extrabold">Clients Question</h2>
+    <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quis iusto nemo sed eaque illo iure, itaque fugit quam! Qui praesentium, placeat quae delectus blanditiis inventore fugit provident in iure.</p>
+  </div>
+</section>
+ <section>
+  <div class="hero min-h-screen justify-center  ">
+    <div class="hero-content flex-col lg:flex-row">
+      <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
+      <div class="space-y-7">
+        <div class="collapse collapse-plus ">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            Our Equipment
+          </div>
+          <div class="collapse-content"> 
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus ">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            Booking
+          </div>
+          <div class="collapse-content"> 
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus ">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            Ski Touring
+          </div>
+          <div class="collapse-content"> 
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus ">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            Private Lessons
+          </div>
+          <div class="collapse-content"> 
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus ">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            Hockey Training
+          </div>
+          <div class="collapse-content"> 
+            <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+ </section>
   </main>
   <footer>
 
