--- a/index.html
+++ b/index.html
@@ -155,12 +155,6 @@
         </div>
 </div>
 </section>
-<section>
-  <h3 class="text-3xl font-extrabold text-center mt-12">Our new Product</h3>
-  <p>Dit amet consectetur. Condimentum dignissim
-    <br>
-     adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-</section>
 <section class="mx-2 lg:mx-24 mt-5">
   <div class="text-center">
     <h2 class=" text-4xl font-extrabold">Clients Question</h2>
@@ -225,7 +219,11 @@
  </section>
  <section>
   <!-- card 1 -->
-  <div class="flex">
+  <h3 class="text-3xl font-extrabold text-center mt-12">Our new Product</h3>
+  <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+    <br>
+     placerat dolor. Purus urna in sit nullam proin. </p>
+  <div class="flex gap-5 mt-3">
 <div class="card card-side bg-base-100 shadow-xl">
   <figure><img src="Images/5.png" alt="Movie"/></figure>
                        <div class="card-body">
@@ -289,7 +287,7 @@
                        </div>
 </div>
   </div>
-  <div class="flex">
+  <div class="flex gap-5 mt-3">
 <div class="card card-side bg-base-100 shadow-xl">
   <figure><img src="Images/7.png" alt="Movie"/></figure>
                        <div class="card-body">
@@ -353,7 +351,7 @@
                        </div>
 </div>
   </div>
-  <div class="flex">
+  <div class="flex gap-5 mt-3">
 <div class="card card-side bg-base-100 shadow-xl">
   <figure><img src="Images/9.png" alt="Movie"/></figure>
                        <div class="card-body">
@@ -419,15 +417,51 @@
   </div>
  </section>
  <section>
-  <div class="w-[1100px] h-[100px] bg-slate-400 rounded-2xl grid  grid-cols-1">
+  <div class="w-[1100px] h-[100px] bg-slate-50 ml-3 mt-10 rounded-2xl grid  grid-cols-1">
     <h3 class=" text-2xl font-extrabold text-center pt-4">Social Media</h3>
     <div class="mx-[498px] mt-5 "><img class="justify-center" src="Images/Social.svg" alt="">
     </div>
   </div>
  </section>
-
-       
 </main>
-    
+    <!-- footer -->
+<footer class="footer p-10 mt-5 bg-black text-base-content text-white rounded-2xl h-[454px]  ">
+  <div class="grid my-24 gap-5 mx-20 text-gray-400">
+<h3 class="text-3xl font-extrabold text-white">Get In Touch</h3>
+<p>Dit amet consectetur. Condimentum  adipiscing aliquam 
+  <br>
+  turpis placerat dolor. Purus urna in sit nullam proin.</p>
+ 
+    <div>
+<p>
+  <i class="fa-solid fa-phone-volume " style="color: #FF4240;"></i>
+   01969587929
+</p>
+    </div>
+    <p><i class="fa-regular fa-envelope" style="color: #FF4240;"></i>
+          antorahmed313@gmail.com</p>
+  </div>
+  <nav class="my-24 gap-5 text-white">
+          <header class="footer-title">Company</header> 
+          <a class="link link-hover">About Us</a>
+          <a class="link link-hover">Career</a>
+          <a class="link link-hover">News & Article</a>
+          <a class="link link-hover">Legal Notice</a>
+        </nav> 
+<nav class="my-24 gap-5">
+  <header class="footer-title">Support</header> 
+  <a class="link link-hover">Help Center</a>
+  <a class="link link-hover">FAQ</a>
+  <a class="link link-hover">Ticket support</a>
+  <a class="link link-hover">Contact Us</a>
+</nav> 
+<nav class="my-24 gap-5">
+  <header class="footer-title">Sevice</header> 
+  <a class="link link-hover">Academy</a>
+  <a class="link link-hover">Group Lessons</a>
+  <a class="link link-hover">Hokeys for kids</a>
+  <a class="link link hover">Hokeys for adult</a>
+</nav>
+  </footer>
 </body>
 </html>
